--- a/index.html
+++ b/index.html
@@ -8,30 +8,40 @@
     <meta property="og:description" content="Photographe professionnelle capturant vos moments précieux.">
     <meta property="og:image" content="URL_image">
     <meta property="og:url" content="https://votre-site.com">
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+    <!-- Chargement de la version minifiée pour réduire le temps de chargement -->
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/style.css">
+    <!-- Préconnexion pour améliorer la vitesse de chargement des polices -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-    <script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
+    <!-- Chargement différé pour les scripts non essentiels -->
+    <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-    <script src="./assets/maugallery.js" defer></script>
-    <script src="./assets/scripts.js" defer></script>
+    
+	<script src="./assets/maugallery.min.js" defer></script> <!-- Version minifié -->
+    <script src="./assets/scripts.min.js" defer></script> <!-- Version minifié -->
+	
+	<!-- Précharger une image critique pour accélérer le rendu initial -->
+    <link rel="preload" as="image" href="./assets/images/slider/ryoji-iwata.webp">
 
 </head>
 <body>
-<div class="top-header">
-	<h3 class="name">Nina Carducci</h3>
-	<div class="nav">   
+<header class="top-header"> <!-- Ajout balise header -->
+	<h1 class="name">Nina Carducci</h1>
+	<nav class="nav">  <!-- Ajout balise nav -->
 		<ul>
 			<li><a href="#about">À propos</a></li>
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webp" alt="instagram" loading="lazy"></a></li>
+            <!-- Utilisation de loading="lazy" pour chargement différé -->
+            <li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
+				<img src="assets/images/instagram.webp" alt="instagram" loading="lazy" width="20" height="20">
+            </a></li>
 		</ul>
-	</div>
-</div>
+	</nav>
+</header>
 <div id="header">
 
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -41,16 +51,16 @@
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 		</div>
 		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="homme-malette" loading="lazy">
-			</div>
-			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="homme-concert" loading="lazy">
-			</div>
-			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="mariage" loading="lazy">
-			</div>
-		</div>
+            <div class="carousel-item active"> <!-- Ajout des dimensions pour éviter les décalages de mise en page  -->
+                <img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="homme-malette" loading="lazy" width="1920" height="1080">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="homme-concert" loading="lazy" width="1920" height="1080">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="mariage" loading="lazy" width="1920" height="1080">
+            </div>
+        </div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Previous</span>
@@ -63,19 +73,20 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" loading="lazy">
+        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" loading="lazy" width="400" height="300">
 	</div>
 	<div id="about-me">
-		<h3 class="about-me__title">A propos de moi</h3>
-		<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
+		<h2 class="about-me__title">A propos de moi</h2>
+		<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
-			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique.
+			Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
 </div>
 <div id="gallery">
-	<h3 class="title">Portfolio</h3>
+	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
-		<div class="gallery" style="display: none">
+		<div class="gallery" style="display: none"> <!-- Ajout alt et lazy-loading -->
 			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" alt="concert" loading="lazy"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="entreprise" loading="lazy"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="entreprise" loading="lazy"/>
@@ -90,14 +101,14 @@
 	<div class="quote">
 		<figure>
 			<blockquote>
-				<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
+				<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h3>
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
 	</div>
 </div>
 <div id="services">
-	<h3 class="title">Mes services</h3>
+	<h2 class="title">Mes services</h2>
 	<div class="container">
 		<div class="service">
 			<div class="service__description">
@@ -135,7 +146,7 @@
 <div class="quote">
 	<figure>
 		<blockquote>
-			<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+			<h2 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h2>
 		</blockquote>
 		<figcaption class="quote__author">- Richard Avedon</figcaption>
 	</figure>
@@ -160,5 +171,11 @@
 		</div>
 	</div>
 </div>
+
+<!-- <footer>
+	// Footer à ajouter plus tard
+	<p>© 2021 Nina Carducci - Photographe professionnelle</p>
+</footer> --> 
+
 </body>
 </html>
