delete position absolute gallery item and width height for carousel

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 		</div>
 		<div class="carousel-inner">
             <div class="carousel-item active"> <!-- Ajout des dimensions pour éviter les décalages de mise en page  -->
-                <img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="homme-malette" loading="lazy" width="1920" height="1080">
+                <img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="homme-malette" loading="lazy">
             </div>
             <div class="carousel-item">
-                <img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="homme-concert" loading="lazy" width="1920" height="1080">
+                <img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="homme-concert" loading="lazy">
             </div>
             <div class="carousel-item">
-                <img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="mariage" loading="lazy" width="1920" height="1080">
+                <img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="mariage" loading="lazy">
             </div>
         </div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -73,7 +73,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" loading="lazy" width="400" height="300">
+        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" loading="lazy" width="400">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
