--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 	<meta property="og:image" content="URL_image">
 	<meta property="og:url" content="https://votre-site.com">
 	<!-- Chargement de la version minifiée pour réduire le temps de chargement -->
-	<link rel="stylesheet" href="/assets/bootstrap/bootstrap.min.css" media="print" onload="this.media='all';">
+	<link rel="stylesheet" href="/assets/bootstrap/bootstrap.min.css">
 
 	<link rel="stylesheet" href="./assets/style.css">
 	<!-- Préconnexion pour améliorer la vitesse de chargement des polices -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet">
+	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
 	<!-- Chargement différé pour les scripts non essentiels -->
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
