fix bootstrap min

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:image" content="URL_image">
 	<meta property="og:url" content="https://votre-site.com">
 	<!-- Chargement de la version minifiée pour réduire le temps de chargement -->
-	<link rel="stylesheet" href="/assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 
 	<link rel="stylesheet" href="./assets/style.css">
 	<!-- Préconnexion pour améliorer la vitesse de chargement des polices -->
