--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="homme-malette"
-					   width="1200" height="800" sizes="100vw">
+					width="800" height="533" sizes="100vw">
 				</div>
 				<div class="carousel-item">
 					<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="homme-concert"
-					  width="1200" height="800" sizes="100vw">
+					width="800" height="533" sizes="100vw" loading="lazy">
 				</div>
 				<div class="carousel-item">
 					<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="mariage"
-					 width="1200" height="800" sizes="100vw">
+					width="800" height="533" sizes="100vw" loading="lazy">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -90,7 +90,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" loading="lazy" width="400">
+			<img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" loading="lazy" width="400" height="400">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
