--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 
 <head>
 	<meta charset="UTF-8">
+	<title>Nina Carducci photographe professionnelle à Bordeaux</title> <!-- Titre de la page -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle à Bordeaux.">
-	<meta property="og:title" content="Nina Carducci - Photographe">
-	<meta property="og:description" content="Photographe professionnelle capturant vos moments précieux.">
-	<meta property="og:image" content="URL_image">
-	<meta property="og:url" content="https://votre-site.com">
+	<meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle à Bordeaux."> <!-- Ajout de la balise meta description -->
+	<meta property="og:type" content="website"> <!-- Ajout de balises Open Graph -->
+	<meta property="og:title" content="Nina Carducci - Photographe"> <!-- Ajout titre -->
+	<meta property="og:description" content="Photographe professionnelle capturant vos moments précieux."> <!-- Ajout description -->
+	<meta property="og:image" content="https://ibtissambbk.github.io/NinaCarducci8/assets/images/nina.webp"> <!-- Ajout image -->
+	<meta property="og:url" content="https://ibtissambbk.github.io/NinaCarducci8/"> <!-- Ajout URL -->
+	<meta property="og:site_name" content="Nina Carducci"> <!-- Ajout nom du site -->
+
+	<!--Twitter-->
+	<meta name="twitter:card" content="summary_large_image"> <!-- Ajout de balises Twitter -->
+	<meta name="twitter:title" content="Nina Carducci - Photographe"> <!-- Ajout titre -->
+	<meta name="twitter:description" content="Photographe professionnelle capturant vos moments précieux."> <!-- Ajout description -->
+	<meta name="twitter:image" content="https://ibtissambbk.github.io/NinaCarducci8/assets/images/nina.webp"> <!-- Ajout image -->
+	<meta property="twitter:url" content="https://ibtissambbk.github.io/NinaCarducci8/"> <!-- Ajout URL -->
+
 	<!-- Chargement de la version minifiée pour réduire le temps de chargement -->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-
-	<link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 	<!-- Préconnexion pour améliorer la vitesse de chargement des polices -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,6 +30,7 @@
 
 	<!-- Chargement différé pour les scripts non essentiels -->
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+	
 	<script
 	src="https://code.jquery.com/jquery-3.7.1.min.js"
 	integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
@@ -27,18 +38,50 @@
 
 	<script src="./assets/maugallery.min.js" defer></script> <!-- Version minifié -->
 	<script src="./assets/scripts.min.js" defer></script> <!-- Version minifié -->
-
-	<title>Nina Carducci photographe professionnelle basée à Bordeaux</title> <!-- Titre de la page -->
-
 	<!-- Précharger une image pour accélérer le rendu -->
 	<link rel="preload" as="image" href="./assets/images/slider/ryoji-iwata.webp">
-
+    
+	<!-- Ajout de balise JSON-LD pour le référencement -->
+	<script type="application/ld+json"> 
+		{
+		  "@context": "https://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carducci",
+		  "description": "Photographe professionnelle à Bordeaux.",
+		  "image": "https://ibtissambbk.github.io/NinaCarducci8/assets/images/nina.webp",
+		  "telephone": "+33 5 56 67 78 89",
+		  "email": "contact@nina-carducci.com",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "FR"
+		  },
+		  "url": "https://ibtissambbk.github.io/NinaCarducci8/",
+		  "openingHoursSpecification": [
+		  {
+			  "@type": "OpeningHoursSpecification",
+			  "dayOfWeek": [
+				  "Monday",
+				  "Tuesday",
+				  "Wednesday",
+				  "Thursday",
+				  "Friday"
+			  ],
+			  "opens": "10:00",
+			  "closes": "19:00"
+		  }
+	  ],
+	  "priceRange": "De 50€ par photo retouchée à 350€ par demi-journée pour un shooting."
+		}
+		</script>
 </head>
 
 <body>
 	<header class="top-header"> <!-- Ajout balise header -->
 		<h1 class="name">Nina Carducci</h1>
-		<div class="nav"> <!-- Ajout balise nav -->
+		<nav class="nav"> <!-- Ajout balise nav -->
 			<ul>
 				<li><a href="#about">À propos</a></li>
 				<li><a href="#gallery">Galerie</a></li>
@@ -49,7 +92,7 @@
 						<img src="assets/images/instagram.webp" alt="instagram" width="20" height="20" loading="lazy" >
 					</a></li>
 			</ul>
-		</div>
+		</nav>
 	</header>
 	<div id="header">
 
