change alt name + add footer

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					width="800" height="533" sizes="100vw" loading="lazy">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="mariage"
+					<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="mariage-hommefemme"
 					width="800" height="533" sizes="100vw" loading="lazy">
 				</div>
 			</div>
@@ -154,31 +154,31 @@
 		<div class="container py-3">
 			<div class="gallery" style="display: none"> <!-- Ajout alt et lazy-loading -->
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/aaron-paul.webp"width="440" height="440" alt="concert"
+					src="./assets/images/gallery/concerts/aaron-paul.webp"width="440" height="440" alt="concert1"
 					loading="lazy" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					src="./assets/images/gallery/entreprise/ali-morshedlou.webp"width="440" height="440"
-					alt="entreprise" loading="lazy" />
+					alt="entreprise1" loading="lazy" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					src="./assets/images/gallery/entreprise/jason-goodman.webp"width="440" height="440"
-					alt="entreprise" loading="lazy" />
+					alt="entreprise2" loading="lazy" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/hannah-busing.webp"width="440" height="440" alt="mariage"
+					src="./assets/images/gallery/mariage/hannah-busing.webp"width="440" height="440" alt="mariage1"
 					loading="lazy" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/ade-tunji.webp"width="440" height="440" alt="portrait"
+					src="./assets/images/gallery/portraits/ade-tunji.webp"width="440" height="440" alt="portrait1"
 					loading="lazy" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/jakob-owens.webp"width="440" height="440" alt="mariage"
+					src="./assets/images/gallery/mariage/jakob-owens.webp"width="440" height="440" alt="mariage2"
 					loading="lazy" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/nino-van.webp"width="440" height="440" alt="portrait"
+					src="./assets/images/gallery/portraits/nino-van.webp"width="440" height="440" alt="portrait2"
 					loading="lazy" />
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/austin-neill.webp"width="440" height="440" alt="concert"
+					src="./assets/images/gallery/concerts/austin-neill.webp"width="440" height="440" alt="concert2"
 					loading="lazy" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/mateus-campos.webp"width="440" height="440" alt="concert"
+					src="./assets/images/gallery/entreprise/mateus-campos.webp"width="440" height="440" alt="entreprise3"
 					loading="lazy" />
 			</div>
 		</div>
@@ -242,7 +242,7 @@
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
 	</div>
-	<div id="contact">
+	<footer id="contact"> <!-- Ajout balise footer -->
 		<div class="container">
 			<div class="form-container">
 				<h3>Une question ? Une demande de devis ?</h3>
@@ -266,13 +266,7 @@
 				<img src="./assets/images/camera.webp" alt="camera" width="450" height="449" style="max-width: 100%; height: auto;" loading="lazy">
 			</div>
 		</div>
-	</div>
-
-	<!-- <footer>
-	// Footer à ajouter plus tard
-	<p>© 2021 Nina Carducci - Photographe professionnelle</p>
-</footer> -->
-
+	</footer>
 </body>
 
 </html>
