--- a/index.html
+++ b/index.html
@@ -28,14 +28,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="crossorigin="anonymous" defer></script>
+	
 	<!-- Chargement différé pour les scripts non essentiels -->
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
-	
-	<script
-	src="https://code.jquery.com/jquery-3.7.1.min.js"
-	integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-	crossorigin="anonymous" defer></script>
-
 	<script src="./assets/maugallery.min.js" defer></script> <!-- Version minifié -->
 	<script src="./assets/scripts.min.js" defer></script> <!-- Version minifié -->
 	<!-- Précharger une image pour accélérer le rendu -->
