minification style css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<!-- Chargement de la version minifiée pour réduire le temps de chargement -->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.min.css"> <!-- Version minifié -->
 	<!-- Préconnexion pour améliorer la vitesse de chargement des polices -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
